# xPyD-plan

./: .gitignore  CONTRIBUTING.md  README.md  REVIEW_POLICY.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  request-review.yml
bot/: AUTHOR_POLICY.md  BOT_POLICY.md  DESIGN_PRINCIPLES.md  DEV_LOOP.md  ENTRY.md  REVIEW_POLICY.md
bot/iterations/: current.md
docs/: DESIGN_PRINCIPLES.md  DEV_LOOP.md  guide.md
docs/iterations/: current.md
examples/: plan_config.yaml
scripts/: run_plan.sh
src/xpyd_plan/: __init__.py  ab_test.py  alerting.py  analyzer.py  annotation.py  anomaly_classifier.py  arrival_pattern.py  backend_compare.py  baseline.py  batch_analysis.py  bench_adapter.py  benchmark_models.py  budget.py  budget_tracker.py  capacity.py  catalog.py  cdf.py  (+104 more)
tests/: __init__.py  test_ab_test.py  test_alerting.py  test_analyzer.py  test_annotation.py  test_anomaly_classifier.py  test_arrival_pattern.py  test_backend_compare.py  test_baseline.py  test_batch_analysis.py  test_bench_adapter.py  test_budget.py  test_budget_tracker.py  test_capacity.py  test_catalog.py  test_cdf.py  test_cli.py  test_cli_analyze.py  test_cold_start.py  test_comparator.py  test_concurrency_util.py  test_confidence.py  test_config.py  test_convergence.py  test_correlation.py  test_cost.py  test_coverage.py  test_cross_validation.py  test_custom_gpu_profiles.py  test_dashboard.py  test_decomposer.py  test_dedup.py  test_diff_report.py  test_discovery.py  test_drift.py  test_duration_advisor.py  test_e2e_integration.py  test_ensemble.py  test_error_budget.py  test_estimator.py  (+86 more)
(+109 files in other folders)
