[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpyd-plan"
version = "0.1.0"
description = "PD ratio planner for xPyD proxy — recommend optimal Prefill:Decode node allocation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
xpyd-plan = "xpyd_plan.cli:main"

# Reserved for future xpyd CLI subcommand discovery
# [project.entry-points."xpyd.commands"]
# plan = "xpyd_plan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
